# rawtoaces

./: .gitignore  CMakeLists.txt  README.md  configure.cmake
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: analysis.yml  build-steps.yml  ci.yml
build_scripts/: install_deps_linux.bash  install_deps_mac.bash  install_deps_windows.bash  install_deps_yum.bash  vcpkg.json
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
include/rawtoaces/: image_converter.h  rawtoaces_core.h
src/bindings/: CMakeLists.txt  py_core.cpp  py_core.h  py_module.cpp  py_util.cpp  py_util.h
src/rawtoaces_core/: define.h  mathOps.h  rawtoaces_core.cpp  spectral_data.cpp
src/rawtoaces_util/: CMakeLists.txt  image_converter.cpp
tests/: CMakeLists.txt  testMath.cpp  test_image_converter.cpp  usage_example_util.cpp
tests/python/: test_image_converter.py
tests/static_analysis/: codechecker.json  codechecker_skipfile.txt
